# pillar

./: .gitignore  .release-please-manifest.json  .tool-versions  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILL.md  config.yaml  link-config.yaml  release-please-config.json
.github/workflows/: release.yml
agent/: CHANGELOG.md  Cargo.toml  README.md  build.rs
agent/docs/: Agave.md  Client-Agnostic-Design.md  Firedancer.md  Frankendancer.md  Jito.md
agent/src/: agent_health.rs  command.rs  config.rs  error.rs  event.rs  grpc.rs  health.rs  http.rs  lifecycle.rs  log_collector.rs  main.rs  metrics.rs  metrics_updater.rs  provisioner.rs  reconcile.rs  rpc_client.rs  script_executor.rs
agent/src/client/: mod.rs
agent/src/health/: mod.rs
agent/src/lifecycle/: mod.rs
agent/src/snapshot/: download_tcp.rs  mod.rs  recovery.rs  staleness.rs
controller/: CHANGELOG.md  Cargo.toml  README.md  build.rs  controller-config.local.yaml  controller-config.yaml
controller/.local/: controller.db-shm  controller.db-wal
controller/dashboards/grafana/: agent-health.json  alert-rules.json  fleet-overview.json  node-detail.json
controller/dashboards/prometheus/: scrape.yml
controller/dev-monitoring/: docker-compose.yml  grafana-dashboards.yml  grafana-datasource.yml  prometheus.yml
controller/scripts/: provision-agave.sh.tmpl  provision-firedancer.sh.tmpl  provision-frankendancer.sh.tmpl  provision-jito.sh.tmpl  provision-mithril.sh.tmpl  provision-surfpool.sh.tmpl  recover.sh.tmpl  restart.sh.tmpl  stop.sh.tmpl  upgrade-agent.sh.tmpl  upgrade-validator.sh.tmpl
controller/src/: api.rs  auth.rs  certs.rs  config.rs  db.rs  grpc_server.rs  main.rs  metrics_endpoint.rs  node_registry.rs  templates.rs  update_checker.rs  web.rs
controller/src/alerts/: api.rs  db.rs  defaults.rs  mod.rs  notify.rs  rules.rs
controller/web/: index.html  package-lock.json  package.json  vite.config.ts
controller/web/src/: App.tsx  api.ts  auth.ts  index.css  mockData.ts  operations.md
controller/web/src/components/: UpdateBanner.tsx
controller/web/src/pages/: Alerts.tsx  Docs.tsx  Grafana.tsx  Login.tsx  NodeDetail.tsx  Overview.tsx
docs/: GRANT.md  OPERATIONS.md  SKILL.md
link/: Cargo.toml  build.rs
link/src/: config.rs  grpc.rs  http.rs  link_health.rs  log_collector.rs  main.rs  metrics.rs  provisioner.rs  state_reader.rs  system_info.rs
operator/: Cargo.toml  README.md
operator/src/: config.rs  event.rs  main.rs  operator.rs  provisioner.rs  role.rs  state.rs
operator/src/health/: mod.rs  rpc_client.rs  rpc_health.rs  types.rs  validator_health.rs
operator/src/lifecycle/: mod.rs
operator/src/snapshot/: download_tcp.rs  mod.rs  recovery.rs
scripts/: install-controller.sh  install-node.sh  setup-grafana-alerts.sh  setup-surfpool-fleet.sh  test-lifecycle.sh
shared/: Cargo.toml  build.rs
shared/proto/: pillar.proto
shared/src/: lib.rs  types.rs
