[package]
name = "pillar-agent"
version = "0.3.1"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
pillar-shared = { path = "../shared" }
anyhow = "1.0.86"
async-trait = "0.1.74"
axum = "0.8"
chrono = { version = "0.4.31", features = ["serde"] }
figment = { version = "0.10.6", features = ["env", "yaml"] }
prost = "0.14.3"
prometheus = "0.14.0"
reqwest = { version = "0.13", features = ["json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.2", features = ["derive"] }
libc = "0.2"
sysinfo = "0.38.1"
thiserror = "2.0.18"
tokio = { version = "1.21", default-features = false, features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = "0.7.10"
tonic = { version = "0.14.3", features = ["tls-ring"] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[build-dependencies]
tonic-prost-build = "0.14"
