[package]
name = "pillar-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
pillar-shared = { path = "../shared" }
anyhow = "1.0.86"
axum = { version = "0.8", features = ["macros"] }
dashmap = "6"
figment = { version = "0.10.6", features = ["env", "yaml"] }
prost = "0.14.3"
rust-embed = "8"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", default-features = false, features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7.10"
tonic = "0.14.3"
tonic-prost = "0.14"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[build-dependencies]
tonic-prost-build = "0.14"
