[package]
name = "pillar-controller"
version = "0.5.1"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
pillar-shared = { path = "../shared" }
anyhow = "1.0.86"
axum = { version = "0.8", features = ["macros"] }
dashmap = "6"
figment = { version = "0.10.6", features = ["env", "yaml"] }
argon2 = "0.5"
getrandom = "0.2"
prost = "0.14.3"
rust-embed = "8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", default-features = false, features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7.10"
tonic = { version = "0.14.3", features = ["tls-ring"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
x509-parser = "0.16"
tonic-prost = "0.14"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[build-dependencies]
tonic-prost-build = "0.14"
