[package]
name = "link"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "link"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.86"
axum = "0.8"
chrono = { version = "0.4.31", features = ["serde"] }
figment = { version = "0.10.6", features = ["env", "yaml"] }
prost = "0.14.3"
prometheus = "0.14.0"
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38.1"
tokio = { version = "1.21", default-features = false, features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = "0.7.10"
tonic = "0.14.3"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[build-dependencies]
tonic-prost-build = "0.14"
