[package]
name = "pillar-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "operator"
path = "src/main.rs"

[dependencies]
pillar-shared = { path = "../shared" }
anyhow = "1.0.86"
prost = "0.14.3"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
figment = { version = "0.10.6", features = ["env", "yaml"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.21", default-features = false, features = ["full", "tracing"] }
tokio-util = "0.7.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
