[package]
name = "pillar-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
prost = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.2", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
